--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ section.about {
     width: 100%;
     height: 383px;
     background-color: var(--color-de-fondo-secundario);
+    padding: 20px 0;
 }
 
 .about__container {
@@ -180,6 +181,7 @@ section.skills {
     display: flex;
     width: var(--medida-containers);
     gap: 30px;
+    padding: 20px 0;
     flex-direction: column;
     align-items: center;
 }
@@ -189,6 +191,7 @@ section.skills {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 10px;
 }
 
 .skills__box {
@@ -211,6 +214,7 @@ section.hobbies {
     display: flex;
     width: var(--medida-containers);
     gap: 30px;
+    padding: 20px 0;
     flex-direction: column;
     align-items: center;
     margin: 50px 0 50px;
@@ -221,6 +225,7 @@ section.hobbies {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 10px;
 }
 
 .hobbies__box {
@@ -244,7 +249,7 @@ section.academic {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 581px;
+    height: 520px;
     background-color: var(--color-de-fondo-secundario);
     justify-content: center;
     align-items: center;
@@ -270,7 +275,7 @@ section.academic {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 289px;
+    height: 220px;
     background-color: var(--color-de-fondo-base);
 }
 
